--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,7 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?qquvi#1" target="_blank">首页</a> | <a href="https://d2bd0i85jg8bcc.cloudfront.net/1?jnlgv" target="_blank">动态网</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/2?gwpata" target="_blank">大纪元</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/4?ckssavnp" target="_blank">看中国</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/pHh5q?humddx" target="_blank">新生网</a> | <a href="https://d3b82atanl11dg.cloudfront.net/tktpt?fqtgehnjb" target="_blank">阿波罗网</a> | <a href="https://d2vpfo96xp4pjo.cloudfront.net/Mjpvu?rtaorsj" target="_blank">干净世界</a> | <a href="https://d3qwx9e7uaergm.cloudfront.net/10?jvbyas" target="_blank">退党服务</a> | <a href="https://d1d4q9enzm2lz3.cloudfront.net/Rffqf?sbkrz" target="_blank">明慧广播</a> | <a href="https://d1ucfc2ix2o07u.cloudfront.net/nw9Vn?ezlezhsih" target="_blank">传奇时代</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/AF9AG?ssdpqbife" target="_blank">新境界影视</a> | <a href="https://d14a0yccee2yym.cloudfront.net/zqMQA?bebbbjxe" target="_blank">文昭谈论</a> | <a href="https://d1u99il8548gs4.cloudfront.net/7?gxhjwdewa" target="_blank">明慧</a></p><p><a href="https://d2iiqnrx4rrboe.cloudfront.net/9?uxgmm" target="_blank">大法</a> | <a href="https://d1bfxyb2xiiyyy.cloudfront.net/3?adcyss" target="_blank">新唐人</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/obAhT?zerva" target="_blank">人民报</a> | <a href="https://di88ceki78g29.cloudfront.net/xXNHu?fysosx" target="_blank">放光明</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/5?rwihhrtin" target="_blank">新纪元</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/6?rhwzxjw" target="_blank">希望之声</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/11?aiose" target="_blank">无界网络</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/Pueji?jinxneqna" target="_blank">追查国际</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/16?butrmry" target="_blank">明慧之窗</a> | <a href="https://d2oemtubh889hy.cloudfront.net/LdvzZ?lxvhsuonj" target="_blank">细语人生</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/fBn3r?oslewekje" target="_blank">新世纪影视</a> | <a href="https://d1z1i6xmekcnf1.cloudfront.net/PUWMb?llrwr" target="_blank">江峰时刻</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/8?sgxvd" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419029.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2025/01/id14419090-GettyImages-2195098514-320x200.jpg"><p align="center">卢比奥宣誓就任国务卿 将与四方外长会晤</p></a>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419029.md#1" title="卢比奥宣誓就任国务卿 将与四方外长会晤""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14419090-GettyImages-2195098514-320x200.jpg">&nbsp;</a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?msyctg#1" target="_blank">首页</a> | <a href="https://d1d4q9enzm2lz3.cloudfront.net/1?oulkzsa" target="_blank">动态网</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/2?lritjkrxk" target="_blank">大纪元</a> | <a href="https://d8jw662akk94j.cloudfront.net/4?zjxstaxp" target="_blank">看中国</a> | <a href="https://d22owz1tif1d5u.cloudfront.net/pHh5q?mhmbpyl" target="_blank">新生网</a> | <a href="https://di88ceki78g29.cloudfront.net/tktpt?ymughcos" target="_blank">阿波罗网</a> | <a href="https://ddtx9y1vir8bp.cloudfront.net/Mjpvu?zvsqv" target="_blank">干净世界</a> | <a href="https://d3frzobj0kj0md.cloudfront.net/10?yrldqwzny" target="_blank">退党服务</a> | <a href="https://d3ohms0ydcz20j.cloudfront.net/Rffqf?vttuvylpo" target="_blank">明慧广播</a> | <a href="https://d2ktwgchvgcnzd.cloudfront.net/nw9Vn?vhakvyf" target="_blank">传奇时代</a> | <a href="https://d3malt9gyhsmb.cloudfront.net/AF9AG?frktbd" target="_blank">新境界影视</a> | <a href="https://d265ujbtchne9r.cloudfront.net/zqMQA?ovgrslg" target="_blank">文昭谈论</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/7?qipolo" target="_blank">明慧</a></p><p><a href="https://d2cj9ah31kn8fl.cloudfront.net/9?gmvpgxlgc" target="_blank">大法</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/3?pmitbueim" target="_blank">新唐人</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/obAhT?osiphv" target="_blank">人民报</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/xXNHu?vpoby" target="_blank">放光明</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/5?mahnsqa" target="_blank">新纪元</a> | <a href="https://d3q99y09eaol9n.cloudfront.net/6?gnovirnqc" target="_blank">希望之声</a> | <a href="https://d337p4rc38c0de.cloudfront.net/11?pwvekhq" target="_blank">无界网络</a> | <a href="https://doyvntponycdh.cloudfront.net/Pueji?dnjvtum" target="_blank">追查国际</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/16?czlaqdzuj" target="_blank">明慧之窗</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/LdvzZ?lnxtph" target="_blank">细语人生</a> | <a href="https://d3bo5docy69ast.cloudfront.net/fBn3r?jhamsag" target="_blank">新世纪影视</a> | <a href="https://d3caox32lipp7h.cloudfront.net/PUWMb?xeucxn" target="_blank">江峰时刻</a> | <a href="https://d18bx7gz18d1cs.cloudfront.net/8?emmrru" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419029.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2025/01/id14419090-GettyImages-2195098514-320x200.jpg"><p align="center">卢比奥宣誓就任国务卿 与四方外长会晤</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419029.md#1" title="卢比奥宣誓就任国务卿 与四方外长会晤""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14419090-GettyImages-2195098514-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419108.md#1" title="神韵日本八王子首场大爆满 评论家赞太精彩""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14419109-250121074538100863-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418930.md#1" title="中国各省下调2025年CPI目标 专家解析""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14409390-GettyImages-2191655415-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418191.md#1" title="25年来 法轮功学员遭中共精神病院摧残（下）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/06/id13761129-d60fa9268a1483f1fb75619248658b2f-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419064.md#1" title="川普将对华100%关税与TikTok协议挂钩""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14417391-250119-TikTok-320x200.jpg">&nbsp;</a>
@@ -11,18 +12,17 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418489.md#1" title="神韵法国斯特拉斯堡首演爆满 商业界赞佩""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418736-250120214218100731-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416866.md#1" title="【更新】川普与梅拉尼娅为就职舞会开舞""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418535-GettyImages-2195004373-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418385.md#1" title="各国领袖祝贺川普就任美国第47届总统""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418673-GettyImages-2194369700-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418504.md#1" title="神韵意大利米兰八场全爆满 各界人士盛赞""><img width="73" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418507-250120193651100731-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418967.md#1">【名家专栏】越来越多美国人青睐整体健康</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419061.md#1">美参院财政委员会批准贝森特财长提名</a><br>
-:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418406.md#1">分析：川普新政 美出口管制会有何变化</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419029.md#1">卢比奥宣誓就任国务卿 将与四方外长会晤</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419077.md#1">不敢承认制裁 中共悄悄更改美国务卿译名</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419119.md#1">川普关税下 三星和LG拟将部分生产迁美国</a><br>
+:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419029.md#1">卢比奥宣誓就任国务卿 与四方外长会晤</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419103.md#1">中国新年前休斯顿法轮功学员祝李大师过年好</a><br>
+:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418967.md#1">【名家专栏】越来越多美国人青睐整体健康</a><br>
+:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419061.md#1">美参院财政委员会批准贝森特财长提名</a><br>
+:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418406.md#1">分析：川普新政 美出口管制会有何变化</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419077.md#1">不敢承认制裁 中共悄悄更改美国务卿译名</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418690.md#1">川习通话 普习视频会晤 专家析美中俄博弈</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418247.md#1">【百年真相】 阳光法案难产 习反腐 越反越腐</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418930.md#1">中国各省下调2025年CPI目标 专家解析</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419070.md#1">川普行政令后 TikTok在苹果谷歌商店仍下架</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418191.md#1">25年来 法轮功学员遭中共精神病院摧残（下）</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14417051.md#1">中共火箭专家及歼-20总设计师双双被免职</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416577.md#1">大陆多地爆发新一波疫情 网曝大量死亡信息</a><br>
@@ -108,13 +108,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414361.md#1">周星驰《女足》开机时间流出 演出阵容引关注</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414357.md#1">中国新年临近 市场萧条 民叹迎惨淡新年</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414298.md#1">【佳音时刻】他能顺利入主五角大楼？看点在这</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2b8y8w8x6ndnc.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2b8y8w8x6ndnc.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: </div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2n3zdowwhp4xe.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2n3zdowwhp4xe.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 43,870</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共  人
+!共 441,800,117 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417787.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418103-Unknown-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417787.md#1">川普上任 上海四维权人士请求关注中国人权</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417779.md#1">大陆地方开两会 访民遭送进精神病院或拘留</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416807.md#1">知情人曝中共军医院活摘囚犯器官的恐怖黑幕</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415521.md#1">退役武警逃出缅甸园区 向中领馆求助被漠视</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414543.md#1">缅甸电诈疑有中共身影 王星获救另有内幕？</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412761.md#1">77岁法轮功学员被迫害离世 看守所提前火化遗体</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418399.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418658-5926519adfaeeb8da73782cd8ef25f8d-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418399.md#1">昔日莆田首富 正荣地产老板被采取强制措施</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418283.md#1">川普将发布备忘录 审查与中国等贸易关系</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418119.md#1">川普重返白宫 北京既抱有希望又紧张不安</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417941.md#1">中国去年钢企利润下跌逾半 销售利润率0.71%</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417918.md#1">中国五星酒店推“剩菜盲盒” 分析：生意难做</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417635.md#1">中国9家光伏企业预亏360亿 超出市场预期</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418690.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418710-GettyImages-2194383933-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418690.md#1">川习通话 普习视频会晤 专家析美中俄博弈</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419070.md#1">川普行政令后 TikTok在苹果谷歌商店仍下架</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418917.md#1">黑龙江省前常务副省长李海涛被公诉</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418855.md#1">云南省昆明市长刘佳晨任上被查</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418138.md#1">【中国禁闻】新疫情爆发 网曝大量死亡案例</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418141.md#1">【环球直击】川普就职后计划发布逾百行政命令</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418910.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418922-6b23449b6369c5c66c50c49bd38c16da-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418910.md#1">河南父亲照顾女儿被传染甲流 两肺全白</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418407.md#1">大陆相声演员许兆呈猝逝 年仅36岁</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417587.md#1">四川阿坝州发生4.9级地震 青海西藏又地震</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416690.md#1">开封清明上河园景区突发大火 现场浓烟滚滚</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416586.md#1">西藏日喀则再次发生4.6级地震</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414507.md#1">河北唐山钓场冰面破裂多人落水 伤亡不明</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418623.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418623.md#1">三退声明精选（2025/01/20）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418310.md#1">换用中国产药片后 高中一个化学实验做不成了</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417880.md#1">珠海无锡两起随机杀人案凶手被同日执行死刑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417736.md#1">大陆女子被骗走300万元 引发热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416864.md#1">麻药不睡、泻药不泻 大陆国产药品的窘状</a><br><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416897.md#1">河南一女士卖房后仍替新房主交13年电费</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14408670.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/06/IMG_7239-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14408670.md#1">瑞士顶尖学府招生筛查中国高校 被指酝酿多年</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399580.md#1">中国又一民营火箭发射失败</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14398910.md#1">从车企到光伏业 中国更多领域陷入“内卷”</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14397974.md#1">中国考研人数再减 传大考首日60万人弃考</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397882.md#1">日本放宽中国游客赴日要求 将推出10年签证</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396531.md#1">崔健乐队知名萨克斯手刘元病逝 终年64岁</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14409355.md#1">【独家】中共欲藉美国定罪法轮功 逃脱世纪人权罪责</a><br>
